# competition-2025-team-13

./: .env  .gitignore  README.md
bots/all_in/skeleton/: states.py
bots/blind_bandit/: player.py
engine/: config.py
gah/: CMakeLists.txt  main.cpp
submission/challenge1/: name.txt
submission/challenge1/src/: main.cpp  util.cpp
submission/main_tournament/src/: main.cpp  util.cpp
